app/components/Footer/footer.module.css
.copyRight {
	font-size: var(--tiny-font-size);
	color: var(--gray-color);
	margin-top: 5rem;
	text-align: center;
	display: flex;
	justify-content: center;
}

